--- a/ex02/Cinema/src/main/webapp/WEB-INF/css/chat.css
+++ b/ex02/Cinema/src/main/webapp/WEB-INF/css/chat.css
@@ -14,19 +14,21 @@
 }
 
 .chat {
-    height: 54vh;
     overflow-y: auto;
     border-radius: 10px;
     background: #212529;
 }
 
 .chat__container {
-    flex-grow: 1;
+    display: flex;
+    flex-direction: column-reverse;
     overflow: auto;
     padding: 26px 26px 26px 0;
+    height: 54vh;
 }
 
 .chat-message {
+    display: inline-table;
     padding: 30px;
     margin: 22px;
     background: #f1f1f1;
